--- a/node/index.html
+++ b/node/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 
+    <a href="./users/add.html">Dodaj uzytkowinka</a>
+    <a href="./users/edit.html">Edytuj uzytkowinka</a>
+    <a href="./users/delete.html">Usun uzytkowinka</a>
+
     <button id="create">Dodaj nowego usera</button>
 
     <ul id="users-list"></ul>
